--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
   </head>
   <body>
-    <div class="root"></div>
+    <div id="root"></div>
     <script src="index.js" type="text/babel"></script>
   </body>
 </html>
